Fixed text alignment on header

--- a/client/src/components/Header/header.css
+++ b/client/src/components/Header/header.css
@@ -2,7 +2,7 @@
   background-color: black;
   display: flex;
   height: 100vh;
-  padding-right: 0px;
+  /* padding: 0px; */
 }
 
 #headerLinks {
